参照模板修改简历

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
-    <title>DIYgod的简历</title>
-    <meta name="description" content="我是一个充满活力、对前端由衷热爱、善于发现问题的前端工程师。我目前正在寻找前端工程师岗位，希望借此机会为贵司献上我的一点绵薄之力，快招我到碗里来吧！">
-    <meta name="keywords" content="DIYgod,前端,工作,简历">
+    <title>陈谣的简历</title>
+    <meta name="description" content="我是一个充满活力、对Java由衷热爱、善于发现问题的工程师。我目前正在寻找工程师岗位，希望借此机会为贵司献上我的一点绵薄之力，快招我到碗里来吧！">
+    <meta name="keywords" content="陈谣, Java, 简历, 工作">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="dist/css/style.min.css">
     <link rel="stylesheet" href="dist/css/fontello.min.css">
-    <script>
+    <!--<script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -17,19 +18,31 @@
         ga('create', 'UA-48084758-4', 'auto');
         ga('send', 'pageview');
 
+    </script>-->
+    <script>
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?2ad46786662cdae99e49f4e231cb3be3";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+
     </script>
+
 </head>
+
 <body>
     <aside>
         <ul>
             <li>
-                <a href="https://github.com/DIYgod/Resume" target="_blank">源代码</a>
+                <a href="https://github.com/piggsoft/" target="_blank">Github</a>
             </li>
             <li>
                 <a href="https://www.anotherhome.net" target="_blank">Blog</a>
             </li>
             <li>
-                <a href="https://www.github.com/DIYgod" target="_blank">GitHub</a>
+                <a href="https://www.piggsoft.com" target="_blank">WebSite</a>
             </li>
         </ul>
     </aside>
@@ -37,85 +50,132 @@
         <div class="sidebar">
             <div class="title">
                 <img src="img/head.png">
-                <h1>DIYgod的简历</h1>
+                <h1>陈谣的简历</h1>
                 <h2>"Write the Code. Change the World."</h2>
             </div>
             <ul class="side-info">
                 <li class="someRight">
                     <dt><i class="icon-bookmark"></i>Contact. 联系方式</dt>
-                    <dd><i class="icon-mail-alt"></i>邮箱: <a href="mailto:i@html.love" target="_blank">i@html.love</a></dd>
-                    <dd><i class="icon-wechat"></i>微信: DIYgod</dd>
-                    <dd><i class="icon-qq"></i>QQ: <a href="http://wpa.qq.com/msgrd?v=3&uin=306578968&site=qq&menu=yes" target="_blank">306578968</a></dd>
+                    <dd><i class="icon-mail-alt"></i>邮箱: <a href="mailto:piggsoft@163.com" target="_blank">piggsoft@163.com</a></dd>
+                    <dd><i class="icon-wechat"></i>微信: 等待III希望</dd>
+                    <dd><i class="icon-qq"></i>QQ: <a href="http://wpa.qq.com/msgrd?v=3&uin=648048875&site=qq&menu=yes" target="_blank">648048875</a></dd>
                 </li>
                 <li class="someRight">
                     <dt><i class="icon-bookmark"></i>Application. 应聘岗位</dt>
-                    <dd>前端工程师</dd>
+                    <dd>Java工程师</dd>
                 </li>
                 <li class="skill">
                     <dt><i class="icon-bookmark"></i>Tech. 技能点</dt>
                     <dd>
-                        <div class="skill-name">JavaScript</div>
+                        <div class="skill-name">Java</div>
                         <div class="skill-bar-wrap">
-                            <div class="skill-bar" style="width: 80%"></div>
+                            <div class="skill-bar" style="width: 85%"></div>
                         </div>
                     </dd>
                     <dd>
-                        <div class="skill-name">HTML</div>
+                        <div class="skill-name">Web</div>
                         <div class="skill-bar-wrap">
                             <div class="skill-bar" style="width: 75%"></div>
                         </div>
                     </dd>
                     <dd>
-                        <div class="skill-name">CSS</div>
+                        <div class="skill-name">SQL</div>
                         <div class="skill-bar-wrap">
-                            <div class="skill-bar" style="width: 72%"></div>
+                            <div class="skill-bar" style="width: 75%"></div>
                         </div>
                     </dd>
                     <dd>
-                        <div class="skill-name">C</div>
-                        <div class="skill-bar-wrap">
-                            <div class="skill-bar" style="width: 70%"></div>
-                        </div>
-                    </dd>
-                    <dd>
-                        <div class="skill-name">Python</div>
+                        <div class="skill-name">JavaScript</div>
                         <div class="skill-bar-wrap">
                             <div class="skill-bar" style="width: 70%"></div>
                         </div>
                     </dd>
                     <dd>
-                        <div class="skill-name">Java</div>
+                        <div class="skill-name">Dubbo</div>
+                        <div class="skill-bar-wrap">
+                            <div class="skill-bar" style="width: 70%"></div>
+                        </div>
+                    </dd>
+                    <dd>
+                        <div class="skill-name">Redis</div>
                         <div class="skill-bar-wrap">
                             <div class="skill-bar" style="width: 65%"></div>
+                        </div>
+                    </dd>
+                    <dd>
+                        <div class="skill-name">Linux</div>
+                        <div class="skill-bar-wrap">
+                            <div class="skill-bar" style="width: 55%"></div>
                         </div>
                     </dd>
                 </li>
             </ul>
             <div class="note">
-                <p>我是一个充满活力、对前端由衷热爱、善于发现问题的前端工程师。</p>
-                <p>我目前正在寻找前端工程师岗位，希望借此机会为贵司献上我的一点绵薄之力，快招我到碗里来吧！</p>
+                <p>我是一个充满活力、对Java由衷热爱、善于发现问题的工程师。</p>
+                <p>我目前正在寻找工程师岗位，希望借此机会为贵司献上我的一点绵薄之力，快招我到碗里来吧！</p>
             </div>
         </div>
         <div class="main">
             <ul class="main-info">
                 <li class="someRight">
                     <dt><i class="icon-bookmark"></i>Basic info. 基本信息</dt>
-                    <dd><span>个人信息:</span> DIYgod / 男 / 20岁</dd>
-                    <dd><span>英语水平:</span> CET-6</dd>
-                    <dd><span>常用ID:</span> DIYgod</dd>
-                    <dd><span>Blog:</span> <a href="https://www.anotherhome.net" target="_blank">www.anotherhome.net</a></dd>
-                    <dd><span>GitHub:</span> <a href="https://www.github.com/DIYgod" target="_blank">www.github.com/DIYgod</a></dd>
+                    <dd><span>个人信息:</span> 陈谣 / 男 / 30岁</dd>
+                    <dd><span>英语水平:</span> CET-4</dd>
+                    <dd><span>常用ID:</span> Piggsoft</dd>
+                    <dd><span>Blog:</span> <a href="https://blog.piggsoft.com" target="_blank">blog.piggsoft.com</a></dd>
+                    <dd><span>GitHub:</span> <a href="https://www.github.com/piggsoft" target="_blank">www.github.com/piggsoft</a></dd>
                 </li>
                 <li>
                     <dt><i class="icon-bookmark"></i>Experience. 项目与工作经验</dt>
-                    <h3>武汉深之度科技有限公司（2015.7 - 2015.11）</h3>
+                    <h3>科大讯飞股份有限公司（2016.3 - 至今）</h3>
                     <ul class="exp">
                         <li>
                             <div class="circle"></div>
                             <h4>深度商店项目</h4>
-                            <p>参与 Linux Deepin 深度商店V4.0 的前端开发工作，根据设计图完成项目的大部分样式，完成了首页、搜索列表、软件详情、软件分类、专题、关于等页面，其中有评论交互、三个不同的轮播图、侧边栏左右拖动、搜索交互等内容，项目采用 WebApp 的形式，运行在 Qt WebKit 上，后端与 deepin 操作系统深度整合，支持一键安装、更新和卸载软件</p>
+                            <p>参与 Linux Deepin 深度商店V4.0 的前端开发工作，根据设计图完成项目的大部分样式，完成了首页、搜索列表、软件详情、软件分类、专题、关于等页面，其中有评论交互、三个不同的轮播图、侧边栏左右拖动、搜索交互等内容，项目采用
+                                WebApp 的形式，运行在 Qt WebKit 上，后端与 deepin 操作系统深度整合，支持一键安装、更新和卸载软件</p>
                             <p>使用 AngularJS 框架 和 Sass 预处理器 来实现前端组件及数据交互，使用 Gulp Bower 改进工作流</p>
                             <img src="img/dstore.png">
+                        </li>
+                    </ul>
+                    <h3>上海富友支付服务有限公司（2015.5 - 2016.03）</h3>
+                    <ul class="exp">
+                        <li>
+                            <div class="circle"></div>
+                            <h4>深度商店项目</h4>
+                            <p>参与 Linux Deepin 深度商店V4.0 的前端开发工作，根据设计图完成项目的大部分样式，完成了首页、搜索列表、软件详情、软件分类、专题、关于等页面，其中有评论交互、三个不同的轮播图、侧边栏左右拖动、搜索交互等内容，项目采用
+                                WebApp 的形式，运行在 Qt WebKit 上，后端与 deepin 操作系统深度整合，支持一键安装、更新和卸载软件</p>
+                            <p>使用 AngularJS 框架 和 Sass 预处理器 来实现前端组件及数据交互，使用 Gulp Bower 改进工作流</p>
+                            <img src="img/dstore.png">
+                        </li>
+                    </ul>
+                    <h3>武汉纬创纬尊软件有限公司（2013.4 - 2015.07）</h3>
+                    <ul class="exp">
+                        <li>
+                            <div class="circle"></div>
+                            <h4>深度商店项目</h4>
+                            <p>参与 Linux Deepin 深度商店V4.0 的前端开发工作，根据设计图完成项目的大部分样式，完成了首页、搜索列表、软件详情、软件分类、专题、关于等页面，其中有评论交互、三个不同的轮播图、侧边栏左右拖动、搜索交互等内容，项目采用
+                                WebApp 的形式，运行在 Qt WebKit 上，后端与 deepin 操作系统深度整合，支持一键安装、更新和卸载软件</p>
+                            <p>使用 AngularJS 框架 和 Sass 预处理器 来实现前端组件及数据交互，使用 Gulp Bower 改进工作流</p>
+                            <img src="img/dstore.png">
+                        </li>
+                    </ul>
+                    <h3>武汉佳利联科技有限公司（2010.7 - 2013.04）</h3>
+                    <ul class="exp">
+                        <li>
+                            <div class="circle"></div>
+                            <h4>交易中间平台的管理后台</h4>
+                            <p><b>系统描述：</b>给运营人员提供维护，查询，管理订单等数据的系统，并且可对线上数据进行报表生成和excel导出。</p>
+                            <p><b>主要责任：</b>订单的CRUD，报表生成，excel导出。</p>
+                            <p></p>
+                        </li>
+                        <li>
+                            <div class="circle"></div>
+                            <h4>杭州中新力合融资系统</h4>
+                            <p><b>系统描述：</b>小微企业融资管理平台。小微企业在系统中发布融资需求，运营人员进行审核，最终发布需求。线下进行资金交易。</p>
+                            <p><b>主要责任：</b>参与融资管理后台开发，根据设计和组长分配的任务进行开发，完成了系统地图，权限控制，在线用户图表展示。</p>
+                            <p><b>工作亮点：</b>第一次在项目中使用ajax技术来动态显示在线用户，使用图片压缩技术多头像压缩，减少在显示在线用户头像时的传输数据的大小。</p>
+                            <p><b>工作成果：</b>针对ajax技术的应用获得了组长和经理的好评，在该季评为优秀员工。</p>
                         </li>
                     </ul>
                     <h3>个人项目</h3>
@@ -127,7 +187,8 @@
                                 <a href="https://github.com/DIYgod/APlayer" target="_blank"><i class="icon-link"></i>源代码</a>
                                 <a href="https://www.anotherhome.net/file/APlayer/" target="_blank"><i class="icon-link"></i>Demo</a>
                             </h4>
-                            <p>炒鸡好看的 HTML5 音乐播放器，GitHub 热门榜（GitHub Trending repositories）前八，npm 下载量 4k+，GitHub 上 Star 615 Fork 103</p>
+                            <p>炒鸡好看的 HTML5 音乐播放器，GitHub 热门榜（GitHub Trending repositories）前八，npm 下载量 4k+，GitHub 上 Star 615 Fork
+                                103</p>
                             <img src="img/aplayer.png">
                         </li>
                         <li>
@@ -172,7 +233,8 @@
                                         <a href="https://www.anotherhome.net/file/ife/task0004/" target="_blank"><i class="icon-link"></i>Demo</a>
                                     </h5>
                                     <p>实现了一个 GTD Tools (个人任务管理系统)，支持任务两级分类、增删查改、标记、根据日期分类等功能，并实现了一个独立的移动版本</p>
-                                    <p>使用 localStorage 来保存用户的任务数据，处理了可能出现的 XSS 安全隐患，使用 原生JavaScript Less预处理器 来实现前端组件及数据交互，使用 Yeoman Grunt 改进工作流</p>
+                                    <p>使用 localStorage 来保存用户的任务数据，处理了可能出现的 XSS 安全隐患，使用 原生JavaScript Less预处理器 来实现前端组件及数据交互，使用
+                                        Yeoman Grunt 改进工作流</p>
                                     <img src="img/task0003.png">
                                     <img src="img/task0004.png" height="97px">
                                 </li>
@@ -297,7 +359,9 @@
         </div>
     </div>
     <footer>
-        <p>Theme by <a href="https://github.com/DIYgod/Resume" target="_blank">DIYgod</a>. Made with <i class="icon-heart throb" style="color: #d43f57;"></i> by DIYgod. 最后更新于2016年3月1日</p>
+        <p>Theme by <a href="https://github.com/DIYgod/Resume" target="_blank">DIYgod</a>. Made with <i class="icon-heart throb"
+                style="color: #d43f57;"></i> by DIYgod. 最后更新于2016年3月1日</p>
     </footer>
 </body>
+
 </html>
